--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,3 +2,13 @@
 body {
     font-family: 'Lora', serif;
 }
+
+.grid-sizer,
+.grid-item {
+    width: 22%;
+    margin-bottom: 3%;
+}
+
+.gutter-sizer {
+    width: 4%;
+}
